test/files/neg/t9509-c.scala

trait t9509 {
  // is Java but not UnicodeIdentifierStart
  //val ₵ = "cents"

  val ᛯ = "sign"

  def sign = s"$ᛯ"
}
